--- a/src/main/java/Vistas/Formulas.form
+++ b/src/main/java/Vistas/Formulas.form
@@ -33,7 +33,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" min="-2" pref="515" max="-2" attributes="0"/>
+          <Component id="jTabbedPane1" pref="514" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -142,7 +142,7 @@
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel55" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane3" pref="127" max="32767" attributes="0"/>
+                      <Component id="jScrollPane3" pref="126" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="BtnAgregarFilaF" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -265,7 +265,7 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="5">
-                        <Column editable="true" title="ID ingrediente" type="java.lang.Object"/>
+                        <Column editable="true" title="Ingrediente" type="java.lang.Object"/>
                         <Column editable="true" title="Nota" type="java.lang.Object"/>
                         <Column editable="true" title="Proporci&#xf3;n " type="java.lang.Object"/>
                       </Table>
@@ -273,17 +273,17 @@
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="ID ingrediente"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Nota"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Proporci&#xf3;n "/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
@@ -422,7 +422,7 @@
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel62" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane4" pref="127" max="32767" attributes="0"/>
+                      <Component id="jScrollPane4" pref="126" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="BtnGuardarFormula1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -536,6 +536,7 @@
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane4">
               <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="12" style="0"/>
                 </Property>
@@ -547,7 +548,7 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="5">
-                        <Column editable="true" title="ID ingrediente" type="java.lang.Object"/>
+                        <Column editable="true" title="Ingrediente" type="java.lang.Object"/>
                         <Column editable="true" title="Nota" type="java.lang.Object"/>
                         <Column editable="true" title="Proporci&#xf3;n " type="java.lang.Object"/>
                       </Table>
@@ -555,17 +556,17 @@
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="ID ingrediente"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Nota"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Proporci&#xf3;n "/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
@@ -698,7 +699,7 @@
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel68" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane5" pref="127" max="32767" attributes="0"/>
+                      <Component id="jScrollPane5" pref="126" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="BtnAgregarFilaF1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -814,6 +815,7 @@
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane5">
               <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="12" style="0"/>
                 </Property>
@@ -825,7 +827,7 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="5">
-                        <Column editable="true" title="ID ingrediente" type="java.lang.Object"/>
+                        <Column editable="true" title="Ingrediente" type="java.lang.Object"/>
                         <Column editable="true" title="Nota" type="java.lang.Object"/>
                         <Column editable="true" title="Proporci&#xf3;n " type="java.lang.Object"/>
                       </Table>
@@ -833,17 +835,17 @@
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="ID ingrediente"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Nota"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Proporci&#xf3;n "/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
@@ -885,6 +887,7 @@
                   <Font name="Segoe UI Light" size="12" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Agregar fila"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnAgregarFilaF1ActionPerformed"/>
@@ -983,7 +986,7 @@
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel74" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane6" pref="127" max="32767" attributes="0"/>
+                      <Component id="jScrollPane6" pref="126" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="BtnGuardarFormula3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1097,6 +1100,7 @@
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane6">
               <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="12" style="0"/>
                 </Property>
@@ -1108,7 +1112,7 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="5">
-                        <Column editable="true" title="ID ingrediente" type="java.lang.Object"/>
+                        <Column editable="true" title="Ingrediente" type="java.lang.Object"/>
                         <Column editable="true" title="Nota" type="java.lang.Object"/>
                         <Column editable="true" title="Proporci&#xf3;n " type="java.lang.Object"/>
                       </Table>
@@ -1116,17 +1120,17 @@
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="ID ingrediente"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Nota"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Proporci&#xf3;n "/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
@@ -1189,7 +1193,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="480" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="479" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
