--- a/src/main/java/Vistas/Ingredientes.form
+++ b/src/main/java/Vistas/Ingredientes.form
@@ -7,7 +7,7 @@
     <Property name="maximizable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[750, 450]"/>
+      <Dimension value="[750, 470]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -28,12 +28,15 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jTabbedPane1" pref="737" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="1" pref="420" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -226,7 +229,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ID Proveedor:"/>
+                <Property name="text" type="java.lang.String" value="Proveedor:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField22">
@@ -540,7 +543,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ID Proveedor:"/>
+                <Property name="text" type="java.lang.String" value="Proveedor:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField26">
@@ -855,7 +858,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ID Proveedor:"/>
+                <Property name="text" type="java.lang.String" value="Proveedor:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField30">
@@ -1170,7 +1173,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ID Proveedor:"/>
+                <Property name="text" type="java.lang.String" value="Proveedor:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField34">
@@ -1315,12 +1318,12 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="752" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="737" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="452" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="385" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
